--- a/scss/imports/core/_libs.scss
+++ b/scss/imports/core/_libs.scss
@@ -87,6 +87,7 @@
   background-color: #d7d7d7;
   box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4);
   transition-duration: 0.25s;
+  z-index: 1000;
   @media (max-width: 991px) {
     display: block;
   }
